2000-04-20  Pavel Cisler  <pavel@eazel.com>

	* libgnomevfs/gnome-vfs-xfer.c:
	(move_items):
	Move the call_progress call after where the file was moved, that way the
	file is in guaranteed to be in it's final destination when the callback 
	kicks in for it.
	

2000-04-19  Pavel Cisler  <pavel@eazel.com>

	* libgnomevfs/gnome-vfs-file-info.c:
	* libgnomevfs/gnome-vfs-file-info.h:
	(gnome_vfs_file_info_matches):
	Added a new call.

	* libgnomevfs/gnome-vfs-xfer.c:
	Added a bunch of call_progress calls to ensure we can follow all 
	the file system changes during a copy.

2000-04-19  Pablo Saratxaga <pablo@mandrakesoft.com>

	* configure.in (ALL_LINGUAS): added Catalan

2000-04-18  Pavel Cisler  <pavel@eazel.com>

	Fixed two bugs Darin ran into.

	* libgnomevfs/gnome-vfs-xfer.c:
	(call_progress_with_current_names), (handle_error),
	(handle_overwrite):
	Made error/overwrite dialogs properly show the file that was being copied
	while an error ocurred.

	* libgnomevfs/gnome-vfs-xfer.c:
	(handle_name_conflicts):
	Add a way for the progress callback to find out if a single or multiple
	items ended up conflicting. That way the progress callback can determine
	if to add a Replace All option or not.

	* libgnomevfs/gnome-vfs-xfer.c:
	(gnome_vfs_xfer_private):
	Added a workaround for a bug that happens when the caller of the
	routine tries to handle a returned error by calling the progress 
	callback -- the problem is that that at that point the progress
	could have already cleaned up after itself knwong that the copy
	operation is over and could have deleted it's user data.
	
	* libgnomevfs/gnome-vfs-xfer.c:
	* test/test-xfer.c:
	Fixed warnings.

2000-04-18  Pavel Cisler  <pavel@eazel.com>

	* libgnomevfs/gnome-vfs-xfer.c:
	(handle_error):
	Made the error return value get set to GNOME_VFS_OK after
	Skip is selected -- This caused gnome_vfs_xfer_private to
	return an unexpected error that execute_xfer didn't know how
	to deal with.

	* libgnomevfs-pthread/gnome-vfs-job.c: