@@ -1,8 +1,10 @@
 
 if USING_OAF
-OBJECT_DIRECTORY_LIBS=$(OAF_LIBS) $(GNOME_LIBS)
+OBJECT_DIRECTORY_CFLAGS = $(OAF_CFLAGS) $(GNOME_CFLAGS)
+OBJECT_DIRECTORY_LIBS = $(OAF_LIBS) $(GNOME_LIBS)
 else
-OBJECT_DIRECTORY_LIBS=$(GNOMEGNORBA_LIBS)
+OBJECT_DIRECTORY_CFLAGS = $(GNOME_CFLAGS)
+OBJECT_DIRECTORY_LIBS = $(GNOMEGNORBA_LIBS)
 endif
 
 
@@ -13,7 +15,8 @@ INCLUDES =					\
 	-I$(top_builddir)/intl			\
 	-I$(top_srcdir)/libgnomevfs		\
 	-I$(top_builddir)/libgnomevfs-corba	\
-	$(GNOME_INCLUDEDIR)
+	$(GNOME_INCLUDEDIR)			\
+	$(OBJECT_DIRECTORY_CFLAGS)
 
 CPPFLAGS =					\
 	-D_GNU_SOURCE				\
